# minutes

./: BUILD-STATUS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TODOS.md  manifest.json
.agents/: napkin.md
.agents/skills/minutes/_runtime/hooks/lib/: minutes-learn-cli.mjs
.agents/skills/minutes/minutes-brief/: SKILL.md
.agents/skills/minutes/minutes-prep/: SKILL.md
.claude/: settings.json
.claude/plugins/minutes/: plugin.json
.claude/plugins/minutes/agents/: meeting-analyst.md
.claude/plugins/minutes/hooks/: session-reminder.mjs
.claude/plugins/minutes/hooks/lib/: minutes-learn.mjs
.claude/plugins/minutes/skills/list/: SKILL.md
.claude/plugins/minutes/skills/minutes-brief/: SKILL.md
.claude/plugins/minutes/skills/minutes-ideas/: SKILL.md
.claude/plugins/minutes/skills/minutes-prep/: SKILL.md
.claude/plugins/minutes/skills/recap/: SKILL.md
.claude/plugins/minutes/skills/record/: SKILL.md
.claude/plugins/minutes/skills/search/: SKILL.md
.github/workflows/: release-macos.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: demo_data.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: capture.rs  config.rs  daily_notes.rs  device_monitor.rs  diarize.rs  dictation.rs  error.rs  events.rs  hotkey_macos.rs  jobs.rs  lib.rs  markdown.rs  notes.rs  pid.rs  pipeline.rs  resample.rs  search.rs  streaming.rs  summarize.rs  transcribe.rs  watch.rs
crates/mcp/: package-lock.json  package.json
crates/mcp/src/: index.ts  paths.test.ts
crates/sdk/: package.json
crates/sdk/src/: reader.ts
docs/: CALL-CAPTURE-DURABLE-PLAN.md  COWORK-RESEARCH.md  DEBUG-DICTATION-HOTKEY.md  MULTI-SOURCE-CAPTURE.md  RELEASE-MACOS.md
docs/designs/: cross-device-ghost-context.md
scripts/: build.sh  install-dev-app.sh
site/: package-lock.json  package.json
site/app/: page.tsx
site/app/compare/: page.tsx
site/app/compare/fireflies-vs-minutes/: page.tsx
site/app/compare/granola-vs-minutes/: page.tsx
site/app/for-agents/: page.tsx
site/app/resources/open-source-alternatives-to-granola-ai/: page.tsx
site/components/: compare-page.tsx
site/public/: compare.md
site/public/compare/: fireflies-vs-minutes.md
site/public/resources/: best-meeting-tools-for-claude-code-and-codex.md
tauri/src/: dictation-overlay.html  index.html  note.html
tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: call_capture.rs  call_detect.rs  commands.rs  context.rs  main.rs  mic_check.swift  palette_dispatch.rs  system_audio_record.swift
tests/integration/: pipeline_test.rs
tooling/skills/compiler/: check.ts  compile.ts  doctor.ts  plugin.ts
tooling/skills/sources/minutes-brief/: skill.md
tooling/skills/sources/minutes-prep/: skill.md
